fix gap

--- a/src/app/components/admin-cuentas/admin-cuentas.component.scss
+++ b/src/app/components/admin-cuentas/admin-cuentas.component.scss
@@ -8,7 +8,6 @@
 .cuentas-searchbar-container{
     display: flex;
     align-items: center;
-    gap: 40px;
     width: 100%;
     position: relative;
     padding: 25px 0;
@@ -233,6 +232,7 @@
     height: 100%;
     text-align: center;
     cursor: pointer;
+    margin-right: 40px;
 }
 
 .chosen-tab{
